--- a/scenarios/helloworld/docker-compose.yml
+++ b/scenarios/helloworld/docker-compose.yml
@@ -2,13 +2,29 @@ version: '3'
 
 services:
 
- producer:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:6.1.0
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+  kafka:
+    image: confluentinc/cp-kafka:6.1.0
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    depends_on:
+      - zookeeper
 
-   build: ./producer
-   volumes:
+  producer:
+    build: ./producer
+    volumes:
      - ./producer:/app
-   ports:
+    ports:
      - "80:80"
-   environment:
+    environment:
      - PORT=80
-   command: uvicorn main:app --host 0.0.0.0 --port 80 --reload
+    command: uvicorn main:app --host 0.0.0.0 --port 80 --reload
