--- a/scenarios/helloworld/docker-compose.yml
+++ b/scenarios/helloworld/docker-compose.yml
@@ -28,3 +28,13 @@ services:
     environment:
      - PORT=80
     command: uvicorn main:app --host 0.0.0.0 --port 80 --reload
+
+  consumer:
+    build: ./consumer
+    volumes:
+     - ./consumer:/app
+    ports:
+     - "8080:80"
+    environment:
+     - PORT=80
+    command: uvicorn main:app --host 0.0.0.0 --port 80 --reload
