--- a/scenarios/events/consumers.yml
+++ b/scenarios/events/consumers.yml
@@ -11,5 +11,5 @@ services:
      - "8000:80"
     environment:
      - PORT=80
-    command: python -u consumer.py
+    command: python -u consumer.py --channel ecommerce
     #sleep infinity
