--- a/scenarios/user-events/consumers.yml
+++ b/scenarios/user-events/consumers.yml
@@ -12,4 +12,4 @@ services:
     environment:
      - PORT=80
     command: python -u consumer.py --channel ecommerce
-    #sleep infinity
+    #command: sleep infinity
