--- a/scenarios/user-events/app/.env
+++ b/scenarios/user-events/app/.env
@@ -4,3 +4,5 @@ base_path=/app/sources
 bootstrap.servers=kafka:9092
 
 schema_registry_url=http://schema-registry:8081
+
+bucket_datalake=s3://etl-on-yaml
