--- a/scenarios/user-events/app/.env
+++ b/scenarios/user-events/app/.env
@@ -5,4 +5,4 @@ bootstrap.servers=kafka:9092
 
 schema_registry_url=http://schema-registry:8081
 
-bucket_datalake=s3://etl-on-yaml
+bucket_datalake=etl-on-yaml
