--- a/scenarios/user-events/consumers.yml
+++ b/scenarios/user-events/consumers.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
 
-  consumer:
+  consumer_1:
     build: ./app
     volumes:
      - ./app:/app
@@ -12,4 +12,16 @@ services:
     environment:
      - PORT=80
     command: python -u consumer.py --source ecommerce
+    #command: sleep infinity
+
+
+  consumer_2:
+    build: ./app
+    volumes:
+     - ./app:/app
+    ports:
+     - "8001:80"
+    environment:
+     - PORT=80
+    command: python -u consumer.py --source marketing
     #command: sleep infinity
