--- a/scenarios/user-events-sparkstreamming/consumers.yml
+++ b/scenarios/user-events-sparkstreamming/consumers.yml
@@ -4,24 +4,11 @@ services:
 
 
   consumer_1:
-    build: ./app
+    build: ./dockers/consumer
     volumes:
      - ./app:/app
     ports:
      - "8000:80"
     environment:
      - PORT=80
-    command: python -u consumer.py --source ecommerce
-    #command: sleep infinity
-
-
-  consumer_2:
-    build: ./app
-    volumes:
-     - ./app:/app
-    ports:
-     - "8001:80"
-    environment:
-     - PORT=80
-    command: python -u consumer.py --source marketing
-    #command: sleep infinity
+    command: sleep infinity
