--- a/scenarios/user-events-sparkstreamming/dockers/consumer/Dockerfile
+++ b/scenarios/user-events-sparkstreamming/dockers/consumer/Dockerfile
@@ -11,12 +11,11 @@ RUN \
 #JAVA
 RUN apt install openjdk-8-jdk -y
 RUN echo "export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64/jre/" >> /etc/bash.bashrc
-RUN echo "export PATH=$PATH:$JAVA_HOME/bin" >> /etc/bash.bashrc
+RUN echo "export PATH=$PATH:/usr/lib/jvm/java-8-openjdk-amd64/jre/bin" >> /etc/bash.bashrc
 
 WORKDIR /root
 RUN wget https://dlcdn.apache.org/spark/spark-3.4.0/spark-3.4.0-bin-hadoop3.tgz
 RUN tar -xvf spark-3.4.0-bin-hadoop3.tgz
 
-
 RUN echo "SPARK_HOME=/root/spark-3.4.0-bin-hadoop3" >> /etc/bash.bashrc
-RUN echo "export PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin" >> /etc/bash.bashrc
+RUN echo "export PATH=$PATH:/root/spark-3.4.0-bin-hadoop3/bin:/root/spark-3.4.0-bin-hadoop3/sbin" >> /etc/bash.bashrc
