--- a/scenarios/user-events-sparkstreamming/dockers/consumer/Dockerfile
+++ b/scenarios/user-events-sparkstreamming/dockers/consumer/Dockerfile
@@ -25,7 +25,11 @@ RUN echo "export PATH=$PATH:/root/spark-3.4.0-bin-hadoop3/bin:/root/spark-3.4.0-
 
 
 #PYTHON
-
 RUN apt-get update && apt-get install python3-pip -y
-
 RUN echo "export PYSPARK_PYTHON=/usr/bin/python3" >> /etc/bash.bashrc
+
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip3 install -r requirements.txt
+COPY . .
