--- a/scenarios/user-events-sparkstreamming/consumers.yml
+++ b/scenarios/user-events-sparkstreamming/consumers.yml
@@ -3,13 +3,39 @@ version: '3'
 services:
 
 
-  consumer_1:
-    build: ./dockers/consumer
-    volumes:
-     - ./app:/app
-    ports:
-     - "8000:80"
+  #consumer_1:
+  #  build: ./dockers/consumer
+  #  volumes:
+  #   - ./app:/app
+  #  ports:
+  #   - "8000:80"
+  #  environment:
+  #   - PORT=80
+
+  #  command: sleep infinity
+
+  # ----------------- #
+  # Apache Spark      #
+  # ----------------- #
+  spark:
+    image: docker.io/bitnami/spark:3.3
     environment:
-     - PORT=80
-     
-    command: sleep infinity
+      - SPARK_MODE=master
+    ports:
+      - '8080:8080'
+      - '4040:4040'
+      - '7077:7077'
+    volumes:
+      - ./data:/data
+      - ./app:/app
+  spark-worker:
+    image: docker.io/bitnami/spark:3.3
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark:7077
+      - SPARK_WORKER_MEMORY=4G
+      - SPARK_EXECUTOR_MEMORY=4G
+      - SPARK_WORKER_CORES=4
+    volumes:
+      - ./data:/data
+      - ./app:/app
