--- a/scenarios/user-events-sparkstreamming/docker-compose.yml
+++ b/scenarios/user-events-sparkstreamming/docker-compose.yml
@@ -43,3 +43,29 @@ services:
     command: uvicorn producer:app --host 0.0.0.0 --port 80 --reload
     depends_on:
       - kafka
+      
+  # ----------------- #
+  # Apache Spark      #
+  # ----------------- #
+  spark:
+    image: docker.io/bitnami/spark:3.3
+    environment:
+      - SPARK_MODE=master
+    ports:
+      - '8080:8080'
+      - '4040:4040'
+      - '7077:7077'
+    volumes:
+      - ./data:/data
+      - ./app:/app
+  spark-worker:
+    image: docker.io/bitnami/spark:3.3
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark:7077
+      - SPARK_WORKER_MEMORY=4G
+      - SPARK_EXECUTOR_MEMORY=4G
+      - SPARK_WORKER_CORES=4
+    volumes:
+      - ./data:/data
+      - ./app:/app
